--- a/Segunda.ui
+++ b/Segunda.ui
@@ -6,38 +6,84 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>619</width>
-    <height>800</height>
+    <width>370</width>
+    <height>336</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>370</width>
+    <height>336</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>370</width>
+    <height>336</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QLabel" name="label">
+  <widget class="QSplitter" name="splitter_2">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>40</y>
-     <width>141</width>
-     <height>71</height>
+     <x>81</x>
+     <y>123</y>
+     <width>221</width>
+     <height>102</height>
     </rect>
    </property>
-   <property name="text">
-    <string>Segunda</string>
+   <property name="orientation">
+    <enum>Qt::Vertical</enum>
    </property>
-  </widget>
-  <widget class="QPushButton" name="btn3">
-   <property name="geometry">
-    <rect>
-     <x>200</x>
-     <y>220</y>
-     <width>75</width>
-     <height>24</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Volver</string>
-   </property>
+   <widget class="QSplitter" name="splitter">
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+    <widget class="QWidget" name="">
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <widget class="QLabel" name="label_5">
+          <property name="text">
+           <string>Nuevo Usuario</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="Nuevo_usuario"/>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <widget class="QLabel" name="label_6">
+          <property name="text">
+           <string>Contraseña</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="Contra2"/>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </widget>
+    <widget class="QPushButton" name="btnCrear_Usuario">
+     <property name="text">
+      <string>Crear Usuario</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QPushButton" name="btn3">
+    <property name="text">
+     <string>Volver</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
