--- a/Grupos.ui
+++ b/Grupos.ui
@@ -132,7 +132,7 @@
     </size>
    </property>
   </widget>
-  <widget class="QListWidget" name="listWidget">
+  <widget class="QListWidget" name="peopleList">
    <property name="geometry">
     <rect>
      <x>20</x>
@@ -147,7 +147,7 @@
     </font>
    </property>
   </widget>
-  <widget class="QLabel" name="userName">
+  <widget class="QLabel" name="groupName">
    <property name="geometry">
     <rect>
      <x>285</x>
@@ -180,7 +180,7 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QLabel" name="userName_2">
+  <widget class="QLabel" name="usersName">
    <property name="geometry">
     <rect>
      <x>20</x>
