--- a/msn_v1.ui
+++ b/msn_v1.ui
@@ -424,14 +424,17 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>580</width>
-        <height>60</height>
+        <width>563</width>
+        <height>121</height>
        </rect>
       </property>
       <attribute name="label">
        <string>Contactos</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_5">
+       <item>
+        <widget class="QListWidget" name="Lista_Contactos"/>
+       </item>
        <item>
         <widget class="QPushButton" name="btn_Private">
          <property name="text">
