--- a/Privado.ui
+++ b/Privado.ui
@@ -25,7 +25,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QPlainTextEdit" name="msgView">
+  <widget class="QPlainTextEdit" name="msgViewPrivate">
    <property name="geometry">
     <rect>
      <x>285</x>
@@ -50,7 +50,7 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLineEdit" name="msgWrite">
+  <widget class="QLineEdit" name="msgWritePrivate">
    <property name="geometry">
     <rect>
      <x>285</x>
@@ -72,7 +72,7 @@
     </size>
    </property>
   </widget>
-  <widget class="QPushButton" name="msgSend">
+  <widget class="QPushButton" name="msgSendPrivate">
    <property name="geometry">
     <rect>
      <x>790</x>
